src/objects/Lab_RX__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lab RXs</relationshipLabel>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acryllic_Shade__c</fullName>
        <label>Acryllic Shade</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BR_Lower_Anterior__c</fullName>
        <label>BR Lower Anterior</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BR_Upper_anterior__c</fullName>
        <label>BR Upper anterior</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BR_lower_left__c</fullName>
        <label>BR lower left</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BR_lower_right__c</fullName>
        <label>BR lower right</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BR_upper_left__c</fullName>
        <label>BR upper left</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BR_upper_right__c</fullName>
        <label>BR upper right</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Lab RXs</relationshipLabel>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA04__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA04</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_notes__c</fullName>
        <label>Description notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>if( DA04__c , &apos;DA04 &apos;, &apos;&apos;) + if( UA04__c , &apos;UA04 &apos;, &apos;&apos;) +  if( LA04__c , &apos;LA04 &apos;, &apos;&apos;) +  if( SingleMultiple__c , &apos;S/M &apos;, &apos;&apos;) + if(  MdCD__c  , &apos;MdCD &apos;, &apos;&apos;) +
 if( MxCD__c , &apos;MxCD &apos;, &apos;&apos;) + if( mxRPD__c , &apos;MxRPD &apos;, &apos;&apos;) + if( MdRPD__c , &apos;MdRPD &apos;, &apos;&apos;) + if(text(Form_type__c)==&apos;General&apos;,text(Form_type__c),&apos;&apos;) 

+ &apos; - &apos; + TEXT(MONTH(  DATEVALUE(CreatedDate) )) + &apos;/&apos; +  TEXT(DAY(DATEVALUE(CreatedDate))) + &apos;/&apos; +  TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_type__c</fullName>
        <label>Form type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surgical</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LA04__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LA04</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MdCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MdCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MdRPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MdRPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Midline_Notes__c</fullName>
        <label>Midline Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Midline_maintain_existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Midline maintain existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Midline_move_left__c</fullName>
        <label>Midline move left</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Midline_move_right__c</fullName>
        <label>Midline move right</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Midline_set_off_opposing__c</fullName>
        <label>Midline set off opposing</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MxCD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MxCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Apt_Date__c</fullName>
        <formula>Clinical_Apt_Calendar__r.Apt_Date__c</formula>
        <label>Next Apt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_POT_Apt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Next POT Apt</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Lab RXs</relationshipLabel>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occlusal_Plan_Maintain_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occlusal Plan Maintain Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occlusal_Plane_Other__c</fullName>
        <label>Occlusal Plane Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Occlusal_Plane__c</fullName>
        <label>Occlusal Plane</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maintain Existing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lab RXs</relationshipLabel>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overlap_Freeway_Space__c</fullName>
        <label>Overlap Freeway Space</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overlap_Horizontal__c</fullName>
        <label>Overlap Horizontal</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overlap_Vertical__c</fullName>
        <label>Overlap Vertical</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Lab RXs</relationshipLabel>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lab_RXs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provisional_RPD_teeth__c</fullName>
        <label>Provisional RPD teeth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Appointment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Appointment</label>
        <referenceTo>Patient_POT_Apt__c</referenceTo>
        <relationshipLabel>Lab RXs (Reference Appointment)</relationshipLabel>
        <relationshipName>Lab_RXs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Review_Time__c</fullName>
        <label>Review Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lab_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SingleMultiple__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SingleMultiple</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tooth_Mould__c</fullName>
        <label>Tooth Mould</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooth_Shade_Other__c</fullName>
        <label>Tooth Shade Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooth_Shade__c</fullName>
        <label>Tooth Shade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A3.5</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>BL2</fullName>
                </value>
                <value>
                    <fullName>BL3</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UA04__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UA04</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical_Close__c</fullName>
        <label>Vertical Close</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vertical_Maintain_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vertical Maintain Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vertical_Open__c</fullName>
        <label>Vertical Open</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Whitening_Tray_Note__c</fullName>
        <label>Whitening Tray Note</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Whitening_Trays__c</fullName>
        <label>Whitening Trays</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mxRPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>mxRPD</label>
        <type>Checkbox</type>
    </fields>
    <label>Lab RX</label>
    <nameField>
        <displayFormat>LRX-{0000}</displayFormat>
        <label>Lab RX Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab RXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>